# nyt-games-bots

./: .gitignore  Cargo.toml  vocab.r  vocab.txt  word_list.txt
crossword/: Cargo.toml
crossword/src/: board.rs  clue.rs  main.rs  puzzle.rs  square.rs  vocab.rs  word.rs
letter-boxed/: Cargo.toml
letter-boxed/src/: main.rs
prefix-tree/src/: lib.rs  main.rs
solver/: Cargo.toml
solver/src/: main.rs
strands/: Cargo.toml
strands/src/: main.rs
vocab-tree/: Cargo.toml
vocab-tree/src/: lib.rs  node.rs  traversal.rs  traversal_arena.rs  traversal_inorder.rs  traversals.rs  trie.rs  trie_arena.rs
