[package]
name = "crossword"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"
derivative = "2.2.0"
itertools = "0.12.0"
pathfinding = "4.9.1"
serde = { version = "1.0.197", features = ["derive"] }
